fix: display heading font-sizes on mobile

--- a/packages/css/src/less/core/_typography-utilities.less
+++ b/packages/css/src/less/core/_typography-utilities.less
@@ -198,8 +198,8 @@
 
 .display-1 {
   margin-bottom: var(--space-24);
-  font-size: 3.5rem; // 56px
-  line-height: 4.5rem; // 72px
+  font-size: 3.7333333333rem; // 56/15px
+  line-height: 4.8rem; // 72/15px
 
   @media (--screen-md) {
     margin-bottom: var(--space-8);
@@ -210,8 +210,8 @@
 
 .display-2 {
   margin-bottom: var(--space-24);
-  font-size: 3.5rem; // 56px
-  line-height: 4.5rem; // 72px
+  font-size: 3.7333333333rem; // 56/15px
+  line-height: 4.8rem; // 72/15px
 
   @media (--screen-md) {
     margin-bottom: var(--space-16);
@@ -222,8 +222,8 @@
 
 .display-3 {
   margin-bottom: var(--space-8);
-  font-size: 2.625rem; // 42px
-  line-height: 3rem; // 48px
+  font-size: 2.8rem; // 42/15px
+  line-height: 3.2rem; // 48/15px
 
   @media (--screen-md) {
     margin-bottom: var(--space-24);
@@ -234,8 +234,8 @@
 
 .display-4 {
   margin-bottom: var(--space-4);
-  font-size: var(--font-size-display-4);
-  line-height: 2rem; // 32px
+  font-size: 1.8666666667rem; // 28/15px
+  line-height: 2.1333333333rem; // 32/15px
 
   @media (--screen-md) {
     margin-bottom: var(--space-24);
